# HexeEmail

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: Core Docs  Email Processing Pipeline (ORDER Flow).md  New_task.txt  Reasoning.txt  ai-node-standard-compliance-summary.md  api-map.md  completed.txt  configuration.md  core-compatibility.md  email-node-architecture.md  email-node-phase2-provider-activation.md  email-node-standards-alignment.md  email-node-standards-compliance-appendix.md  frontend-modularity-audit.md  gmail-fetch-status-storage.md  gmail-oauth-setup-guide.md  gmail-scope-strategy.md  index.md  local-shipment-email-scrubber.md  node-notification-implementation.md  node-ui-replication-guide.md  operations.md  order-phase1-fetch-normalize.md  order-phase2-scrubber.md  order-phase2-targeting.md  order-phase3-profile-detection.md  order-phase4-template-extraction.md  order_flow_tests.md  order_non_amazon_test_candidates.md  pattern-generation.md  phase1-runbook.md  phase2-gmail-provider-runbook.md  phase2-manual-acceptance.md  provider-boundary.md  runtime-path-ownership.md  runtime-prompt-lifecycle-alignment-audit.md  runtime-prompt-lifecycle-implementation-note.md  runtime.md  scheduler-and-background-tasks.md  security-and-sensitive-state.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: bootstrap.sh  classify_gmail_db_locally.py  dev.sh  export_order_db_corpus.py  export_unclassified_normalized_json.py  generate_pattern.py  gmail_desktop_auth.py  phase1_acceptance.sh  reset_runtime.sh  restart-stack.sh  run_order_flow_test_batch.py  stack-control.sh  stack.env  stack.env.example  start.sh  status.sh  ui-dev.sh  update_order_flow_tests.py
(+172 files in other folders)
